# FloraLab

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  Makefile  README.md  pyproject.toml
florago/: .gitignore  DEBUGGING.md  Makefile  README.md  REMOTE_DEBUGGING.md  SLURM_BEST_PRACTICES.md  SLURM_GUIDE.md  go.mod  main.go
florago/cmd/: flowerclient.go  flowerserver.go  root.go  start.go
florago/utils/: caddy.go  config.go  debugger.go  file.go  flowerstack.go  logger.go  modules.go  paths.go  python.go  slurm.go  venv.go
floralab/: __init__.py  cli.py  ui_server.py
floralab/templates/: dashboard.html
hackathon-coldstart/: README.md  pyproject.toml
hackathon-coldstart/hackathon_coldstart/: __init__.py  client_app.py  server_app.py  task.py
