[project]
name = "floralab"
version = "0.1.0"
description = "Python CLI for interacting with Flower-AI stacks on SLURM via florago"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "ray>=2.31.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["floralab"]

[tool.hatch.build.targets.wheel.force-include]
"floralab/bin/florago-amd64" = "floralab/bin/florago-amd64"
"floralab/bin/caddy-amd64" = "floralab/bin/caddy-amd64"
"floralab/bin/dlv-amd64" = "floralab/bin/dlv-amd64"
"floralab/templates/dashboard.html" = "floralab/templates/dashboard.html"

[project.scripts]
# Install a console entry point: `floralab-cli`
floralab-cli = "floralab.cli:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true